# worker

./: pyproject.toml
module/: get_config.py
package/module/: queue.py  upscale.py
package/module/models/: upscale.py
router/: __init__.py  main_router.py  upscale_router.py
router/module/: config.json
router/package/app/: __init__.py
