[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
motor = "^3.1.1"
rq = "^1.12.0"
psutil = "^5.9.4"
# if you not window? try package\realsr_ncnn_vulkan_python-1.0.6-cp(python_version)-cp(python_version)-(your os)_x86_64.whl
realsr-ncnn-vulkan-python = {path = "package/realsr_ncnn_vulkan_python-1.0.6-cp310-cp310-win_amd64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
